[B]Version 1.1.36[/B]
- Add sxyprn
- Fix OK XXX playback
- Fix streamate listing bug
- Add subject to stripchat
- Add XNXX
- Add Lesbian PornVideos