@@ -5,3 +5,4 @@
 - Add subject to stripchat
 - Add XNXX
 - Add Lesbian PornVideos
+- Fix Erogarga video playback
